--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                         <i class="bi bi-house-door-fill"></i> QUẢN LÝ BỘ PHẬN
                     </a>
                     <div class="collapse" id="departmentFunctions">
-                        <a href="/Admin/AddDepartment" class="list-group-item list-group-item-action">
+                        <a href="/Admin/CreateDepartments" class="list-group-item list-group-item-action">
                             <i class="bi bi-plus-square"></i>Thêm bộ phận
                         </a>
                         <a href="/Admin/UpdateDepartmentName" class="list-group-item list-group-item-action">
