cập nhật chức năng

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                         <a href="/Admin/UpdateDepartments" class="list-group-item list-group-item-action">
                             <i class="bi bi-pencil-square"></i>Cập nhật thông tin bộ phận
                         </a>
-                        <a href="/Admin/DeleteDepartment" class="list-group-item list-group-item-action">
+                        <a href="/Admin/DeleteDepartments" class="list-group-item list-group-item-action">
                             <i class="bi bi-x-circle"></i>Xóa bộ phận
                         </a>
                     </div>
